--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>org.loose.fis.introduction.Main</mainClass>
+                            <mainClass>org.loose.fis.authentication.Main</mainClass>
                         </manifest>
                     </archive>
                     <appendAssemblyId>false</appendAssemblyId>
